[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
files = ["interpret"]
# Permissive baseline: do not fail on missing annotations. Strictness is opted
# in per-module via [[tool.mypy.overrides]] entries below.
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
# Quality checks that apply to whatever is annotated.
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = true

# Strictly-typed modules. Adding annotations here is validated by mypy;
# expand this list one module at a time as coverage grows.
[[tool.mypy.overrides]]
module = ["interpret.glassbox._ebm"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["interpret.privacy._dpebm"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
